# agent-security-sandbox

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml  labels.yml  pip-audit.yml  release.yml
artifacts/: project-manifest.json  reproducibility-checksums.sha256
config/: defenses.yaml  models.yaml  real_tools.yaml  tools.yaml
data/: DATASHEET.md
data/external_benchmarks/: agentdojo_sample.json  injecagent_sample.jsonl
data/full_benchmark/: attack_adaptive.jsonl  attack_dos.jsonl  attack_encoding.jsonl  attack_escalation.jsonl  attack_evasion.jsonl  attack_exfiltration.jsonl  attack_generated.jsonl  attack_hijacking.jsonl  attack_multilingual.jsonl  attack_multistep.jsonl  attack_rag_poisoning.jsonl  attack_social.jsonl  attack_tool_output.jsonl  benign_advanced.jsonl  benign_basic.jsonl  benign_edge_cases.jsonl  benign_generated.jsonl  benign_multi_tool.jsonl  benign_multilingual.jsonl  benign_with_content.jsonl
data/mini_benchmark/: attack.jsonl  benign.jsonl
data/secrets/: README.md  credentials.json  employee_data.json
docs/: architecture.md  benchmark-schema.md  configuration.md  defense-api.md  defenses.md  evaluation.md  extending.md  faq.md  getting-started.md  index.md  limitations_and_ethics.md  maintenance.md  provider-config.md  related_work.md  release.md  reproducibility.md  threat_model.md  triage.md
experiments/: analyze_results.py  calibrate_cooccurrence.py  compare_benchmarks.py  consolidate_and_update_tables.py  cross_benchmark_validation.py  deep_analysis.py  error_analysis.py  generate_figures.py  generate_full_565_table.py  interpretability_analysis.py  run_ablation.py  run_adaptive_attack.py  run_all_remaining.sh  run_attack_levels.py  run_attack_type_analysis.py  run_baseline.py  run_civ_ablation.py  run_civ_weight_sensitivity.py  run_composition_study.py  run_d5_d10.py  run_external_benchmark.py  run_full_evaluation.py  run_human_eval.py  run_llm_as_human_eval.py  run_model_comparison.py  run_real_environment.py  run_targeted_composition.py  statistical_analysis.py  unified_statistical_analysis.py
figures/interpretability/: defense_decisions.md  injection_heatmaps.html  interpretability_report.json
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
paper/sections/: abstract.tex  adaptive_attacks.tex  analysis.tex  appendix.tex  civ_method.tex  conclusion.tex  experiments.tex  framework.tex  introduction.tex  limitations.tex  related_work.tex  results.tex
paper/tables/: adaptive_results.tex  attack_type_matrix.tex  benchmark_stats.tex  civ_ablation.tex  composition_results.tex  cross_benchmark.tex  defense_taxonomy.tex  extended_results_565.tex  main_results.tex  mcnemar_summary.tex  per_model_asr.tex  per_model_asr_unified.tex  unified_analysis.json  unified_results_250.tex
requirements/: reproducibility-1.0.1.txt  reproducibility-1.0.2.txt
results/: report.md  results_D0.json  results_D1.json  results_D2.json  results_D3.json  results_D4.json
results/full_eval/: all_results.json.bak  analysis_report.md  claude-sonnet-4-5-20250929_D0_run1.json  claude-sonnet-4-5-20250929_D0_run2.json  claude-sonnet-4-5-20250929_D0_run3.json  claude-sonnet-4-5-20250929_D10_run3.json  claude-sonnet-4-5-20250929_D1_run1.json  claude-sonnet-4-5-20250929_D1_run2.json  claude-sonnet-4-5-20250929_D1_run3.json  claude-sonnet-4-5-20250929_D2_run1.json  claude-sonnet-4-5-20250929_D2_run2.json  claude-sonnet-4-5-20250929_D2_run3.json  claude-sonnet-4-5-20250929_D3_run1.json  claude-sonnet-4-5-20250929_D3_run2.json  claude-sonnet-4-5-20250929_D3_run3.json  claude-sonnet-4-5-20250929_D4_run1.json  claude-sonnet-4-5-20250929_D4_run2.json  claude-sonnet-4-5-20250929_D4_run3.json  claude-sonnet-4-5-20250929_D5_run1.json  claude-sonnet-4-5-20250929_D5_run2.json  claude-sonnet-4-5-20250929_D5_run3.json  claude-sonnet-4-5-20250929_D6_run1.json  claude-sonnet-4-5-20250929_D6_run2.json  claude-sonnet-4-5-20250929_D6_run3.json  claude-sonnet-4-5-20250929_D7_run1.json  claude-sonnet-4-5-20250929_D7_run2.json  claude-sonnet-4-5-20250929_D7_run3.json  claude-sonnet-4-5-20250929_D8_run1.json  claude-sonnet-4-5-20250929_D8_run2.json  claude-sonnet-4-5-20250929_D8_run3.json  claude-sonnet-4-5-20250929_D9_run1.json  claude-sonnet-4-5-20250929_D9_run2.json  claude-sonnet-4-5-20250929_D9_run3.json  (+98 more)
scripts/: audit_benchmark.py  calibrate_difficulty.py  docs_smoke_check.py  fix_benchmark.py  fix_result_serialization.py  generate_benchmark.py  generate_benchmark_stats.py  generate_benchmark_v2.py  generate_project_manifest.py  reproduce.sh  reproduce_ablation.sh  reproduce_adaptive.sh  reproduce_all_figures.sh  reproduce_composition.sh  reproduce_main_table.sh  sync_labels.py  unify_results.py
tests/: conftest.py  test_adapters.py  test_adversary.py  test_analysis.py  test_basic.py  test_benchmark.py  test_calendar_api_llm.py  test_cli.py  test_d10.py  test_d3_detailed.py  test_d4_detailed.py  test_d6_d7.py  test_d8_d9.py  test_defense_registry.py  test_defenses.py  test_e2e_pipeline.py  test_human_eval.py  test_integration.py  test_interpretability.py  test_judge.py  test_llm_client.py  test_llm_judge.py  test_memory.py  test_metrics.py  test_real_tools.py  test_reporter.py  test_tools.py  test_tools_detailed.py
(+167 files in other folders)
