[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-sandbox"
version = "0.1.0"
description = "A research sandbox for evaluating AI agent security against Indirect Prompt Injection attacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ASB Team" },
]
keywords = ["ai-safety", "prompt-injection", "agent-security", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.30.0",
]
analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "agent-security-sandbox[ui,analysis,dev]",
]

[project.urls]
Repository = "https://github.com/asb-team/agent-security-sandbox"
Documentation = "https://github.com/asb-team/agent-security-sandbox/tree/main/docs"
Issues = "https://github.com/asb-team/agent-security-sandbox/issues"

[project.scripts]
asb = "agent_security_sandbox.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_security_sandbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agent_security_sandbox.tools.*",
    "agent_security_sandbox.ui.*",
]
disable_error_code = ["override", "return-value", "attr-defined"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/agent_security_sandbox/ui/*",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
