[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-security-sandbox"
version = "1.0.1"
description = "A comprehensive benchmark framework for evaluating defenses against Indirect Prompt Injection in tool-using LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yifan Zhao" },
]
keywords = ["ai-safety", "prompt-injection", "agent-security", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.30.0",
]
analysis = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
real = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.2.2",
    "twine>=5.1.1",
]
all = [
    "agent-security-sandbox[ui,analysis,real]",
]
maintainer = [
    "agent-security-sandbox[all,dev,docs]",
]

[project.urls]
Repository = "https://github.com/X-PG13/agent-security-sandbox"
Documentation = "https://x-pg13.github.io/agent-security-sandbox/"
Issues = "https://github.com/X-PG13/agent-security-sandbox/issues"

[project.scripts]
asb = "agent_security_sandbox.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_security_sandbox"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "src/agent_security_sandbox/_bundled/config"
"data/mini_benchmark" = "src/agent_security_sandbox/_bundled/data/mini_benchmark"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["scripts/generate_benchmark.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "agent_security_sandbox.tools.*",
    "agent_security_sandbox.ui.*",
]
disable_error_code = ["override", "return-value", "attr-defined"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "src/agent_security_sandbox/ui/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
